@@ -3,6 +3,14 @@
 # NOTE: the latest CVS tag must appear in the first 10 lines of this ChangeLog.
 # This version tag is used in building "cvstag.h" for version identification.
 
+2008-01-18	David Fang		<fangism@users.sourceforge.net>
+
+	* HACKT-00-01-04-main-00-82-02-ACT-03-05:
+	  prsim: 'pending' command to check if event is already
+		pending on node.  Also comes with debug mode.  Tested.
+	  Now allow interpreter to accept comments like "#foobar".
+
+
 2008-01-17	David Fang		<fangism@users.sourceforge.net>
 
 	* HACKT-00-01-04-main-00-82-02-ACT-03-04:
